[docs] swag용 인풋 타입 생성, 오타수정
