# docs/swagger.json
@@ -64,7 +64,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.Menu"
+                            "$ref": "#/definitions/controller.NewMenuInput"
                         }
                     }
                 ],
@@ -350,6 +350,23 @@
                 }
             }
         },
+        "controller.NewMenuInput": {
+            "type": "object",
+            "properties": {
+                "category": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "origin": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "integer"
+                }
+            }
+        },
         "controller.ReviewInput": {
             "type": "object",
             "properties": {
@@ -405,7 +422,7 @@
                 "score": {
                     "type": "number"
                 },
-                "status": {
+                "state": {
                     "type": "integer"
                 }
             }
